--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,12 @@ edition = "2018"
 ggrs = "0.4.1"
 serde = { version = "1.0.127", features = ["derive"] }
 bincode = "1.3"
-rapier3d = { version = "0.10", features = [ "serde-serialize", "enhanced-determinism" ] }
+#rapier3d = { version = "0.10", features = [ "serde-serialize", "enhanced-determinism" ] }
 
 [dependencies.rg3d]
 git = "https://github.com/rg3dengine/rg3d"
-rev = "b32b5874e7fa6086e0ec92a2daa5d260cc8021a4"
+rev = "be151fd2b2c25192ce251386d973f0c6d1f8196e"
+features = ["enhanced-determinism"]
 
 #[dependencies.rg3d_ui]
 #git = "https://github.com/rg3dengine/rg3d/tree/master/rg3d-ui"
